@@ -291,7 +291,7 @@ class DefaultExecutionContext(base.ExecutionContext):
                     if c in self.compiled.inline_params:
                         self._lastrow_has_defaults = True
                         if c.primary_key:
-                            need_lastrowid = True
+                            last_inserted_ids.append(None)
                     # check if its not present at all.  see if theres a default
                     # and fire it off, and add to bind parameters.  if
                     # its a pk, add the value to our last_inserted_ids list,
@@ -306,15 +306,12 @@ class DefaultExecutionContext(base.ExecutionContext):
                             if c.primary_key:
                                 last_inserted_ids.append(param.get_processed(c.key))
                         elif c.primary_key:
-                            need_lastrowid = True
+                            last_inserted_ids.append(None)
                     # its an explicitly passed pk value - add it to
                     # our last_inserted_ids list.
                     elif c.primary_key:
                         last_inserted_ids.append(param.get_processed(c.key))
-                if need_lastrowid:
-                    self._last_inserted_ids = None
-                else:
-                    self._last_inserted_ids = last_inserted_ids
+                self._last_inserted_ids = last_inserted_ids
                 self._last_inserted_params = param
         elif self.compiled.isupdate:
             if isinstance(self.compiled_parameters, list):
