@@ -28,6 +28,9 @@
     - added undefer_group() MapperOption, sets a set of "deferred"
       columns joined by a "group" to load as "undeferred".
 - sql
+  - result.last_inserted_ids() should return a list that is identically
+    sized to the primary key constraint of the table.  values that were 
+    "passively" created and not available via cursor.lastrowid will be None.
   - long-identifier detection fixed to use > rather than >= for 
     max ident length [ticket:589]
   - fixed bug where selectable.corresponding_column(selectable.c.col)
